@@ -1,5 +1,15 @@
 2006-08-22  Mike Kelly  <pioto@pioto.org>
 
+	* bash/common/read_userdata.bash.in
+	bash/common/read_groupdata.bash.in: Misc. cleanup. Make us die if we
+	can't find some value for one of the variables (we should normally at
+	least be able to read the default fallbacks).
+
+	* bash/common/getent_TEST.bash: Rename with a .in suffix, to keep
+	things consistent.
+
+2006-08-22  Mike Kelly  <pioto@pioto.org>
+
 	* bash/common/functions.bash.in: Added debug_msg(), which is used for
 	displaying less-important messages only when the environment has DEBUG
 	set.
